Fix dropdown overlapping

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   background-color: rgb(231, 231, 231);
 
   section {
+    height: 100%;
     margin-top: 18px;
     display: flex;
     justify-content: space-around;
